2010-11-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Put full copyright text in *.h source files (FSF's recommendation).
	  Thanks to Jari Aalto <jari.aalto@cante.net>.

2010-08-18 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.1.1

2010-07-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Added Dutch translation of the manual.

2010-07-19 Erwin Waterlander <waterlan@xs4all.nl>
	* MinGW-w64 Makefile added for Windows 64 bit port.

2010-06-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Don't ship po/*.mo files in source package.
	* Win32 binary package uses patched MinGW's libintl, with builtin
	  relocation support. See http://www.xs4all.nl/~waterlan/libintl.html

2010-04-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Support compilation in DOSBox (8.3 file names where needed).

2010-04-14 Erwin Waterlander <waterlan@xs4all.nl>
	* Fixed compilation on Darwin OS. Thanks to Marc Gianzero.

2010-04-03 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.1

2010-03-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Man page generation from Perl POD file.
	  Thanks to Jari Aalto <jari.aalto@cante.net>
	* Merge dos2unix and unix2dos man pages.

2010-03-17 Erwin Waterlander <waterlan@xs4all.nl>
	* Add localization information to manual.

2010-03-16 Rugxulo <rugxulo@gmail.com>
	* Added Esperanto translation.

2010-03-13 Erwin Waterlander <waterlan@xs4all.nl>
	* DJGPP, dos32bit: Create 'stubs' for mac2unix and unix2mac.
	  See also http://www.delorie.com/djgpp/v2faq/faq22_5.html
	  Thanks to Rugxulo <rugxulo@gmail.com>

2010-03-11 Erwin Waterlander <waterlan@xs4all.nl>
	* Allow to set options in stdio mode.
	* dos2unix: bugfix MAC mode: Don't change DOS line endings.
	* Display help if a wrong option was used.

2010-03-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Port to 16 bit DOS, using OpenWatcom.

2010-03-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Port to 16 bit DOS, using Borland C.

2010-02-16 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.0
