@@ -1,2 +1,3 @@
 DOS2UNIX_VERSION = 5.1.2-beta1
+DOS2UNIX_VERSION_SHORT = 512b1
 DOS2UNIX_DATE = 2010-11-25
